add password validation when reset, add resend email feature